# MetaTraderMessageShare

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  dll_test.cpp  dll_test.h  interface.cpp  interface.h  main_test.cpp  监听http.py
src/DingTalk/: DingTalkSender.cpp  DingTalkSender.h
src/PublicPipeline/Encoding/: EncodingProcessing.cpp  EncodingProcessing.h
